    to set up an OUT parameter, just like bindparam(); after execution, values are
    avaiable via result.out_parameters dictionary. [ticket:507]

0.3.11
- orm
    - added a check for joining from A->B using join(), along two
      different m2m tables.  this raises an error in 0.3 but is 
      possible in 0.4 when aliases are used. [ticket:687]
- engine
    - fixed another occasional race condition which could occur
      when using pool with threadlocal setting
- mssql
    - added support for TIME columns (simulated using DATETIME) [ticket:679]
    - index names are now quoted when dropping from reflected tables [ticket:684]
- postgres
    - when reflecting tables from alternate schemas, the "default" placed upon
      the primary key, i.e. usually a sequence name, has the "schema" name
      unconditionally quoted, so that schema names which need quoting are fine.
      its slightly unnecessary for schema names which don't need quoting
      but not harmful.
      
0.3.10
- general
    - a new mutex that was added in 0.3.9 causes the pool_timeout
      feature to fail during a race condition; threads would 
      raise TimeoutError immediately with no delay if many threads 
      push the pool into overflow at the same time.  this issue has been
      fixed.
- sql
  - got connection-bound metadata to work with implicit execution
  - foreign key specs can have any chararcter in their identifiers
   [ticket:667]
  - added commutativity-awareness to binary clause comparisons to
    each other, improves ORM lazy load optimization [ticket:664]
- orm
  - cleanup to connection-bound sessions, SessionTransaction
- postgres
  - fixed max identifier length (63) [ticket:571]

  
0.3.9
- general
    - better error message for NoSuchColumnError [ticket:607]
    - finally figured out how to get setuptools version in, available
      as sqlalchemy.__version__ [ticket:428]
    - the various "engine" arguments, such as "engine", "connectable",